New traits galore UNFINISHED

--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -978,17 +978,45 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	trait_tec_unity_eater_desc:0 "§LThis species has a specific need of psychic nourishment complimentary to its organic needs, manifesting in the consumption of redundant thoughts, feelings or what some may call ''psychic'' aura.§!"
 	TRAIT_TEC_UNITY_EATER_EFFECT:0 "£pop£ Species £trigger_tec_basic_resources£ Base Resources Upkeep: §G-50%§!\n£pop£ Pop £unity£ Unity Upkeep: §R+0.25§!"
 
-	trait_tec_spore_growth:0 "Fungo-Sporangic Propagation"
+	trait_tec_spore_growth:0 "Sporangic Propagation"
 	trait_tec_spore_growth_desc:0 "§LBy dispersing millions of microscopic corpuscles, of which many are able to thrive due to condition, compatibility or coincidence, this species reproduce incredibly fast.§!"
-	trait_tec_spore_growth_effect:0 "TODO TRAIT each pop increases pop growth on the planet"
+	trait_tec_spore_growth_effect:0 "Each pop increases $tec_loc_pop_growth$ on the planet by §G0.25%§!"
 
 	trait_tec_dual_gametoids:0 "Dual Gametoids"
-	trait_tec_dual_gametoids_desc:0 "§LTO DO§!"
-	trait_tec_dual_gametoids_EFFECT:0 "Each time a pop of this species is generated, there is a §G15%§! chance of another pop being £mod_pop_growth_speed£ §GGenerated§!."
+	trait_tec_dual_gametoids_desc:0 "§LEvolutionary adaptations made this species produce several mirroring embryos, which led to explosive population growth due to multiple viable offsprings per reproductive cycle.§!"
+	trait_tec_dual_gametoids_effect:0 "Each time a pop of this species is §YGenerated§!, there is between a §G10%§! and §G30%§! chance of another pop being §Y£mod_pop_growth_speed£ Created§!, proportional to the number of pops on the planet."
 
-	trait_tec_panspermic:0 "Panspermic Dispersion"
-	trait_tec_panspermic_desc:0 "§LAn anomalous biological development made this species generate a propagation effect when reproducing, manifesting their kind in far away regions or even entire celestial-grade distances, dispersing their genes and generating new life. The mysteries of life, unquestionable as always.§!"
-	TRAIT_TEC_PANSPERMIC_EFFECT:0 "Each time a pop of this species is generated, there is a §G25%§! chance of a close-by planet generating a $tec_loc_blocker$ that can be cleared, generating an §Yadditional§! $tec_loc_pop$."
+	trait_tec_celestial_panspermia:0 "Celestial Panspermia"
+	trait_tec_celestial_panspermia_desc:0 "§LAn anomalous biological development made this species generate a propagation effect when reproducing, manifesting their kind in far away regions or even entire celestial-grade distances, dispersing their genes and generating new life. The mysteries of life, unquestionable as always.§!"
+	trait_tec_celestial_panspermia_effect:0 "Each time a pop of this species is §YGenerated§!, there is a §G20%§! chance of a close-by or far-away planet gains a clearable $tec_loc_blocker$, which generates §G1§! biological $tec_loc_pop$ with this trait."
+
+	d_tec_celestial_organic:0 "Celestial Pod"
+	d_tec_celestial_organic_desc:0 "This strange organic pod is growing by absorbing nearby inert materials and residual energy, life can be sensed thriving on its interior."
+	d_tec_celestial_organic_on_cleared_effect:0 "We will energyze the pod, creating §G1§! organic celestial pop."
+	d_tec_celestial_organic_on_cleared_homicidal_effect:0 "We will destroy the pod, giving us §G$tec_loc_unity$§!."
+	d_tec_celestial_organic_on_cleared_devourer_effect:0 "We will devour the pod, providing us with §Y$tec_loc_food$§!"
+	d_tec_celestial_lithoid:0 "Celestial Geode"
+	d_tec_celestial_lithoid_desc:0 "A rocky formation that is pulsating with energy, and absorbing materials from its surroundings for creating something new."
+	d_tec_celestial_lithoid_on_cleared_effect:0 "We will energyze the pod, creating §G1§! lithoid celestial pop."
+	d_tec_celestial_lithoid_on_cleared_homicidal_effect:0 "$d_tec_celestial_organic_on_cleared_homicidal_effect$"
+	d_tec_celestial_lithoid_on_cleared_devourer_effect:0 "We will devour the pod, providing us with §Y$tec_loc_minerals$§!"
+	d_tec_celestial_biomechanical:0 "Celestial Crucible"
+	d_tec_celestial_biomechanical_desc:0 "An incredible apparatus that is recognising nearby energetic signals, creating life from matter and energy at its surroundings."
+	d_tec_celestial_biomechanical_on_cleared_effect:0 "We will energyze the pod, creating §G1§! biomechanical celestial pop."
+	d_tec_celestial_biomechanical_on_cleared_homicidal_effect:0 "$d_tec_celestial_organic_on_cleared_homicidal_effect$"
+	d_tec_celestial_biomechanical_on_cleared_devourer_effect:0 "We will devour the pod, providing us with §Y$tec_loc_food$§!"
+
+	decision_tec_break_celestial_pods:0 "Break the Pods"
+	decision_tec_break_celestial_pods_desc:0 "These strange anomalies in the planet are a worrying sign, but we can take advantage of them by studying and disposing of them properly."
+	decision_tec_break_celestial_pods:0 "We will break all Celestial $tec_loc_blockers$ on the planet, gaining §YResources§! for each one destroyed."
+
+	d_tec_decomposition_robotic:0 "Obsolescence Junkyard"
+	d_tec_decomposition_robotic_desc:0 "An enormous deposit of previous and discarded robotic models, serving as a repository for materials, pieces and overall replacements for new and better uses."
+	d_tec_decomposition_lithoid:0 "Decayed Mountains"
+	d_tec_decomposition_lithoid_desc:0 "Rich veins of minerals are formed from the decayed remains of lithoid species, creating entire new mountains over time ready for mining operations"
+	d_tec_decomposition_organic:0 "Decayed Bog"
+	d_tec_decomposition_organic_desc:0 "An amalgamation of rich biomass created as byproduct of the disintegration of certain organics, where now life can flourish once more from death."
+
 
 	trait_tec_positive_thoughts:0 "Positivist"
 	trait_tec_positive_thoughts_desc:0 "§LThis species is able to find a light amongst an infinite empty void, and a song amongst a cascade of emptiness, always keeping positivity abroad.§!"
