--- a/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
@@ -1510,7 +1510,6 @@ todo_ascension:0 ""
 
  # --------------- T2 CyberPsionics
 
-
 # /
 
 
@@ -1686,9 +1685,6 @@ todo_ascension:0 ""
 
  # /
 # /
-
-
-
 # ------------------------------------------------------------------------------------
 # ------------------------------------------------------------------------------------
 # --------------------------------- MAIN ASCENSIONS ----------------------------------
@@ -3443,13 +3439,14 @@ todo_ascension:0 ""
  # /
 # /
 
-# Techno-Organic GATE SITUATION
+# Mystical GATE SITUATION
 # ------------------------------------------------------------ namespace = tec_ascension.400xx
 	# Psionic/Psychic/Ethereal initializer
 	tec_ascension.400.name:0 "An Awakening"
 	tec_ascension.400.desc.regular:0 "It all started with a thought, a dream, a vague memory. But then... all became clear; something, somehow, had changed inside us, something had awakened.\nThe ''Event'', as we have named it, happened within all our population, within all our territory, at the same time, which called our curiosity, and thus... we have started to study it.\n\nWe don't know what future holds but something is sure, we are not the same as yesterday, we are not the same as before, and something... awaits."
-	tec_ascension.400.desc.spiritualist:0 "TODO ASCENSION It all started with a thought, a dream, a vague memory. But then... all became clear; something, somehow, had changed inside us, something had awakened.\nThe ''Event'', as we have named it, happened within all our population, within all our territory, at the same time, which called our curiosity, and thus... we have started to study it.\n\nWe don't know what future holds but something is sure, we are not the same as yesterday, we are not the same as before, and something... awaits."
-	tec_ascension.400.desc.materialist:0 "TODO ASCENSION It all started with a thought, a dream, a vague memory. But then... all became clear; something, somehow, had changed inside us, something had awakened.\nThe ''Event'', as we have named it, happened within all our population, within all our territory, at the same time, which called our curiosity, and thus... we have started to study it.\n\nWe don't know what future holds but something is sure, we are not the same as yesterday, we are not the same as before, and something... awaits."
+	# TODO ASCENSION write different
+	tec_ascension.400.desc.spiritualist:0 "It all started with a thought, a dream, a vague memory. But then... all became clear; something, somehow, had changed inside us, something had awakened.\nThe ''Event'', as we have named it, happened within all our population, within all our territory, at the same time, which called our curiosity, and thus... we have started to study it.\n\nWe don't know what future holds but something is sure, we are not the same as yesterday, we are not the same as before, and something... awaits."
+	tec_ascension.400.desc.materialist:0 "It all started with a thought, a dream, a vague memory. But then... all became clear; something, somehow, had changed inside us, something had awakened.\nThe ''Event'', as we have named it, happened within all our population, within all our territory, at the same time, which called our curiosity, and thus... we have started to study it.\n\nWe don't know what future holds but something is sure, we are not the same as yesterday, we are not the same as before, and something... awaits."
 	tec_ascension.400.approach.slow.regular:0 "We should focus on a patient introspection"
 	tec_ascension.400.approach.slow.regular.tooltip:0 "$tec_adopt_ascension_approach_slow_risk$"
 	tec_ascension.400.approach.standard.regular:0 "Open our minds, concentrate"
@@ -3536,22 +3533,108 @@ todo_ascension:0 ""
 	tec_ascension.40050.desc.materialist:0 "Our experts in psychology and paranormal studies have reached a conclusion: We are close to unlocking our true potential and our mental capacities are growing, further.\nThe few that heard ''the calling'' are using their expanded mids to announce the blesses it ''promises'' to bring, trying to convince others to join their pseudo-creed; Others, however, proclaim the superiority of their mind capacity over others, the superiority of their cultivation and how anyone could access it with enough will; We have yet to prove if any of those proclaims is true.\n\nOur most experts in the field are keeping a strict scientific control and monitoring over the new and potential developments, or potential dangers, but definitively...Would be beneficial for our whole kind to decide, as a whole, what we are willing to demonstrate... and to believe and embrace."
 	tec_ascension.40050.psionics.regular:0 "Embrace the §PPsionic§! call"
 	tec_ascension.40050.psionics.regular.tooltip:0 "We will embrace the §PPsionic Ascension§! path and follow the call from the unknown that bolsters our powers."
-	tec_ascension.40050.psychic.regular:0 "Embrace the §MPsychic§! focus"
-	tec_ascension.40050.psychic.regular.tooltip:0 "We will embrace the §MPsychic Ascension§! path and continue developing our mental capacities further."
+	tec_ascension.40050.psychics.regular:0 "Embrace the §MPsychic§! focus"
+	tec_ascension.40050.psychics.regular.tooltip:0 "We will embrace the §MPsychic Ascension§! path and continue developing our mental capacities further."
 
 	tec_ascension.40150.name:0 "Frontiers of the Mind"
 	tec_ascension.40150.desc.hive:0 "TODO ASCENSION"
 	tec_ascension.40150.desc.cyberhive:0 "TODO ASCENSION"
-	tec_ascension.40150.psychic.hive:0 "Embrace the §MPsychic§! focus"
-	tec_ascension.40150.psychic.hive.tooltip:0 "We will embrace the §MPsychic Ascension§! path and continue developing our mental capacities further."
+	tec_ascension.40150.psychics.hive:0 "Embrace the §MPsychic§! focus"
+	tec_ascension.40150.psychics.hive.tooltip:0 "We will embrace the §MPsychic Ascension§! path and continue developing our mental capacities further."
 # /
 
 # Mystical Path A - Psionic
 # ------------------------------------------------------------ namespace = tec_psionic_path
 # --------------- PSIONIC T1 SITUATION
- # Unsorted
- # /
- # --------------- PSIONIC T1 SITUATION
+	tec_psionic_path.10050.name:0 "$ap_mind_over_matter_psionic$"
+	tec_psionic_path.10050.desc.regular:0 "TODO ACENSION"
+	tec_psionic_path.10050.desc.spiritualist:0 "TODO ACENSION"
+	tec_psionic_path.10050.desc.materialist:0 "TODO ACENSION"
+	tec_psionic_path.10050.desc.hive:0 "TODO ACENSION - This is here in case vanilla adds psionic hives"
+	#"Sometimes the natural evolution needs a nudge in the right direction, and with mastery over genetic edition tools... we have the best possible way to provide it.\n\nWith a correct use of the malleability techniques we are developing, we will be able to modify our bodies, our minds, the very foundation of our species to endure the trials of an ever-changing environment at an unprecedented rate, even with the opportunity to further change our possibilities."
+	tec_psionic_path.10050.regular:0 "A new vision revealed for our kind"
+	tec_psionic_path.10050.regular.tooltip:0 "$tec_situation_continues_normal$"
+	tec_psionic_path.10050.spiritualist:0 "Divinity will provide us with answers"
+	tec_psionic_path.10050.spiritualist.tooltip:0 "$tec_situation_continues_normal$"
+	tec_psionic_path.10050.materialist:0 "No mysteries will remain unrevealed"
+	tec_psionic_path.10050.materialist.tooltip:0 "$tec_situation_continues_normal$"
+	tec_psionic_path.10050.regular.notech:0 "$tec_situation_slowed_by_tech_mystical_regular$"
+	tec_psionic_path.10050.regular.notech.tooltip:0 "$tec_situation_continues_normal$"
+	tec_psionic_path.10050.hive:0 "TODO ACENSION - This is here in case vanilla adds psionic hives"
+	tec_psionic_path.10050.hive.tooltip:0 "$tec_situation_slower_notech_biological$"
+	tec_psionic_path.10050.hive.notech:0 "$tec_psionic_path.10050.regular.notech$"
+	tec_psionic_path.10050.hive.notech.tooltip:0 "$tec_situation_slowed_by_tech_mystical_hive$"
+
+	tec_psionic_path.10065.name:0 "Dream Within A Dream"
+	tec_psionic_path.10065.desc.regular:0 "TODO ACENSION"
+	tec_psionic_path.10065.desc.spiritualist:0 "TODO ACENSION"
+	tec_psionic_path.10065.desc.materialist:0 "TODO ACENSION"
+	tec_psionic_path.10065.desc.hive:0 "TODO ACENSION - This is here in case vanilla adds psionic hives"
+	tec_psionic_path.10065.regular:0 "A clear focus will open our mind"
+	tec_psionic_path.10065.regular.tooltip:0 "$tec_situation_continues_normal$"
+	tec_psionic_path.10065.regular.ambition:0 "The boundaries of reality... we can see them"
+	tec_psionic_path.10065.regular.ambition.tooltip:0 "$tec_situation_continues_normal$"
+	tec_psionic_path.10065.spiritualist:0 "Our faith gives us strenght"
+	tec_psionic_path.10065.spiritualist.tooltip:0 "$tec_situation_continues_normal$"
+	tec_psionic_path.10065.spiritualist.ambition:0 "A gift bestowed, a vision we could follow..."
+	tec_psionic_path.10065.spiritualist.ambition.tooltip:0 "$tec_situation_continues_normal$"
+	tec_psionic_path.10065.materialist:0 "Rationality must ensure our progress"
+	tec_psionic_path.10065.materialist.tooltip:0 "$tec_situation_continues_normal$"
+	tec_psionic_path.10065.materialist.ambition:0 "We could make our dreams real..."
+	tec_psionic_path.10065.materialist.ambition.tooltip:0 "$tec_situation_continues_normal$"
+	tec_psionic_path.10065.regular.notech:0 "$tec_situation_slowed_by_tech_mystical_regular$"
+	tec_psionic_path.10065.regular.notech.tooltip:0 "$tec_situation_continues_normal$"
+	tec_psionic_path.10065.hive:0 "TODO ACENSION - This is here in case vanilla adds psionic hives"
+	tec_psionic_path.10065.hive.tooltip:0 "$tec_situation_slower_notech_biological$"
+	tec_psionic_path.10065.hive.notech:0 "$tec_psionic_path.10065.regular.notech$"
+	tec_psionic_path.10065.hive.notech.tooltip:0 "$tec_situation_slowed_by_tech_mystical_hive$"
+	# Gives the option for ethereals
+	tec_psionic_path.10075.name:0 "Expanded Horizon"
+	tec_psionic_path.10075.desc.regular:0 "TODO ACENSION"
+	tec_psionic_path.10075.desc.spiritualist:0 "TODO ACENSION"
+	tec_psionic_path.10075.desc.materialist:0 "TODO ACENSION"
+	tec_psionic_path.10075.desc.hive:0 "TODO ACENSION - This is here in case vanilla adds psionic hives"
+	tec_psionic_path.10075.regular:0 "Out of many possibilities, the way is clear"
+	tec_psionic_path.10075.regular.tooltip:0 "$tec_situation_continues_normal$"
+	tec_psionic_path.10075.regular.ambition:0 "Perhaps we can reach further..."
+	tec_psionic_path.10075.regular.ambition.tooltip:0 "$tec_situation_continues_normal$"
+	tec_psionic_path.10075.spiritualist:0 "We have been shown the way"
+	tec_psionic_path.10075.spiritualist.tooltip:0 "$tec_situation_continues_normal$"
+	tec_psionic_path.10075.spiritualist.ambition:0 "Could we... reach divinity ourselves?"
+	tec_psionic_path.10075.spiritualist.ambition.tooltip:0 "$tec_situation_continues_normal$"
+	tec_psionic_path.10075.materialist:0 "This path willl ensure our success"
+	tec_psionic_path.10075.materialist.tooltip:0 "$tec_situation_continues_normal$"
+	tec_psionic_path.10075.materialist.ambition:0 "A way to explore further could be ... devised"
+	tec_psionic_path.10075.materialist.ambition.tooltip:0 "$tec_situation_continues_normal$"
+	tec_psionic_path.10075.regular.notech:0 "$tec_situation_slowed_by_tech_mystical_regular$"
+	tec_psionic_path.10075.regular.notech.tooltip:0 "$tec_situation_continues_normal$"
+	tec_psionic_path.10075.hive:0 "TODO ACENSION - This is here in case vanilla adds psionic hives"
+	tec_psionic_path.10075.hive.tooltip:0 "$tec_situation_slower_notech_biological$"
+	tec_psionic_path.10075.hive.notech:0 "$tec_psionic_path.10075.regular.notech$"
+	tec_psionic_path.10075.hive.notech.tooltip:0 "$tec_situation_slowed_by_tech_mystical_hive$"
+
+	tec_psionic_path.10090.name:0 "Frontiers Of The Mind"
+	tec_psionic_path.10090.desc.regular.base:0 "TODO ACENSION"
+	tec_psionic_path.10090.desc.regular.finish:0 "TODO ACENSION"
+	tec_psionic_path.10090.desc.regular:0 "$tec_psionic_path.10090.desc.regular.base$\n\n$tec_psionic_path.10090.desc.regular.finish$"
+	tec_psionic_path.10090.desc.regular.ambition:0 "$tec_psionic_path.10090.desc.regular.base$\n\nTODO\n\n$tec_psionic_path.10090.desc.regular.finish$"
+	tec_psionic_path.10090.desc.spiritualist.base:0 "TODO ASCENSION"
+	tec_psionic_path.10090.desc.spiritualist.finish:0 "TODO ASCENSION"
+	tec_psionic_path.10090.desc.spiritualist:0 "$tec_psionic_path.10090.desc.spiritualist.base$\n\n$tec_psionic_path.10090.desc.spiritualist.finish$"
+	tec_psionic_path.10090.desc.spiritualist.ambition:0 "$tec_psionic_path.10090.desc.spiritualist.base$\n\nTODO\n\n$tec_psionic_path.10090.desc.spiritualist.finish$"
+	tec_psionic_path.10090.desc.materialist.base:0 "TODO ASCENSION"
+	tec_psionic_path.10090.desc.materialist.finish:0 "TODO ASCENSION"
+	tec_psionic_path.10090.desc.materialist:0 "$tec_psionic_path.10090.desc.materialist.base$\n\n$tec_psionic_path.10090.desc.materialist.finish$"
+	tec_psionic_path.10090.desc.materialist.ambition:0 "$tec_psionic_path.10090.desc.materialist.base$\n\nTODO\n\n$tec_psionic_path.10090.desc.materialist.finish$"
+	tec_psionic_path.10090.desc.hive:0 "TODO ACENSION - This is here in case vanilla adds psionic hives"
+	tec_psionic_path.10090.adopt.psionics:0 "Embrace the §PPsionic§! guidance"
+	tec_psionic_path.10090.adopt.psionics.tooltip:0 "$tec_loc_final_decision$\nWe will continue on this path, allowing the Shroud to guide our kind, unlocking the §Y$tradition_psionics$§! traditions. The situation will continue normally."
+	tec_psionic_path.10090.reconsider.psychics:0 "Reconsider the §MPsychic§! approach"
+	tec_psionic_path.10090.reconsider.psychics.tooltip:0 "$tec_loc_final_decision$\nWe will diverge towards the alternative path, attempting to unlock the power of our mind on our own, unlocking the §Y$tradition_tec_psychics$§! traditions. Situation progress will be reduced, but situation speed will increase."
+	tec_psionic_path.10090.ambition.ethereals:0 "Follow our §RAmbition§!... find other way"
+	tec_psionic_path.10090.ambition.ethereals.tooltip:0 "$tec_loc_final_decision$\nWe will follow our ambition for more power and internal growth. We will unlock and adopt a new approach, and the situation will continue."
+
+ # --------------- PSIONIC T1 FINISH
 
 
  # /
