--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -68,10 +68,27 @@
 	trait_tec_bioservant_dumb:0 "Bio-Irrational"
 	trait_tec_bioservant_dumb_desc:0 "§L''Keep any bioservant far away from any non-drooling proof material.''§!\n"
 
+	trait_tec_gifted_physicists:0 "Gifted Physicists"
+	trait_tec_gifted_physicists_desc:0 "§LA sharp mind able to decipher even the most complicated theorem makes this species able to understand the keys that conform the universe and reality itself.§!\n"
+
+	trait_tec_gifted_sociologists:0 "Gifted Sociologists"
+	trait_tec_gifted_sociologists_desc:0 "§LThe culturo-social development as its own is a delight for this species, being able to understand and promote any idea in a fast and efficient way.§!\n"
+
+	trait_tec_gifted_engineers:0 "Gifted Engineers"
+	trait_tec_gifted_engineers_desc:0 "§LMechanical development and environments feel like a natural home for this species, developing state-of-the-art marvels of engineering.§!\n"
+
+	trait_tec_negated_physicists:0 "Negated Physicists"
+	trait_tec_negated_physicists_desc:0 "§LWhat compounds the mysteries of the universe keeps being as a mystery for this species, even at a very basic level.§!\n"
+
+	trait_tec_negated_sociologists:0 "Negated Sociologists"
+	trait_tec_negated_sociologists_desc:0 "§LAttempting to understand natural communicative and social developments for this species is a tedious and frustrating task.§!\n"
+
+	trait_tec_negated_engineers:0 "Negated Engineers"
+	trait_tec_negated_engineers_desc:0 "§LThe mechanical functionality of engineering elements for this species seems to evade their understanding, leading to reiterative trial and error processes, where error (and catastrophic) prevails.§!\n"
+
 	trait_tec_perfectionist:0 "Perfectionist"
 	trait_tec_perfectionist_desc:0 "§LAnything this species produces has a undeniable mark on it and its quality; it's not only making the best, but doing it so it becomes the state of the art.§!\n"
 	TRAIT_TEC_PERFECTIONIST_EFFECT:0 "£alloys£ £consumer_goods£ Industrial resources from £job£ Jobs: §G+5%§!"
-
 
 	trait_tec_bioservant_perfectionist:0 "Bio-Perfectionist"
 	trait_tec_bioservant_perfectionist_desc:0 "§LAnything this species produces has a undeniable mark on it and its quality; it's not only making the best, but doing it so it becomes the state of the art.§!\n"
