feat: more tenets

--- a/localisation/english/zz_evolved_autogenerated_cult_l_english.yml
+++ b/localisation/english/zz_evolved_autogenerated_cult_l_english.yml
@@ -111,6 +111,48 @@
  faction_demand_TEC_CULT_tec_tenet_executive_aggrandizement: "$tec_cult_tec_tenet_executive_aggrandizement$"
  faction_demand_TEC_CULT_tec_tenet_executive_aggrandizement_liked_desc: "Having the §Y$tec_cult_tec_tenet_executive_aggrandizement$§! Tenet pleases the [Root.GetName]"
  faction_demand_TEC_CULT_tec_tenet_executive_aggrandizement_disliked_desc: "Having the §Y$tec_cult_tec_tenet_executive_aggrandizement$§! Tenet displeases the [Root.GetName]"
+ tec_has_tec_tenet_cosmic_curiosity_yes: "£trigger_yes£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_cosmic_curiosity']"
+ tec_has_tec_tenet_cosmic_curiosity_no: "£trigger_no£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_cosmic_curiosity']"
+ tec_activate_cult_tec_tenet_cosmic_curiosity: "$tec_activate_cult_effect$ ['tradition:tec_cult_tec_tenet_cosmic_curiosity']"
+ tec_deactivate_cult_tec_tenet_cosmic_curiosity: "$tec_deactivate_cult_effect$ ['tradition:tec_cult_tec_tenet_cosmic_curiosity']"
+ tec_has_last_activated_tec_tenet_cosmic_curiosity_yes: "£trigger_yes£ $tec_has_empire_last_activated_cult$ ['tradition:tec_cult_tec_tenet_cosmic_curiosity']"
+ tec_has_last_activated_tec_tenet_cosmic_curiosity_no: "£trigger_no£ $tec_has_empire_last_activated_cult$ ['tradition:tec_cult_tec_tenet_cosmic_curiosity']"
+ tec_has_last_deactivated_tec_tenet_cosmic_curiosity_yes: "£trigger_yes£ $tec_has_empire_last_deactivated_cult$ ['tradition:tec_cult_tec_tenet_cosmic_curiosity']"
+ tec_has_last_deactivated_tec_tenet_cosmic_curiosity_no: "£trigger_no£ $tec_has_empire_last_deactivated_cult$ ['tradition:tec_cult_tec_tenet_cosmic_curiosity']"
+ tec_cult_tec_tenet_cosmic_curiosity_modifier: "$tec_cult_tec_tenet_cosmic_curiosity$"
+ tec_cult_tec_tenet_cosmic_curiosity_header: "§H$tec_cult_tec_tenet_cosmic_curiosity$§!"
+ tec_cult_tec_tenet_cosmic_curiosity_key: "tec_cult_tec_tenet_cosmic_curiosity"
+ faction_demand_TEC_CULT_tec_tenet_cosmic_curiosity: "$tec_cult_tec_tenet_cosmic_curiosity$"
+ faction_demand_TEC_CULT_tec_tenet_cosmic_curiosity_liked_desc: "Having the §Y$tec_cult_tec_tenet_cosmic_curiosity$§! Tenet pleases the [Root.GetName]"
+ faction_demand_TEC_CULT_tec_tenet_cosmic_curiosity_disliked_desc: "Having the §Y$tec_cult_tec_tenet_cosmic_curiosity$§! Tenet displeases the [Root.GetName]"
+ tec_has_tec_tenet_interspecies_grievances_yes: "£trigger_yes£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_interspecies_grievances']"
+ tec_has_tec_tenet_interspecies_grievances_no: "£trigger_no£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_interspecies_grievances']"
+ tec_activate_cult_tec_tenet_interspecies_grievances: "$tec_activate_cult_effect$ ['tradition:tec_cult_tec_tenet_interspecies_grievances']"
+ tec_deactivate_cult_tec_tenet_interspecies_grievances: "$tec_deactivate_cult_effect$ ['tradition:tec_cult_tec_tenet_interspecies_grievances']"
+ tec_has_last_activated_tec_tenet_interspecies_grievances_yes: "£trigger_yes£ $tec_has_empire_last_activated_cult$ ['tradition:tec_cult_tec_tenet_interspecies_grievances']"
+ tec_has_last_activated_tec_tenet_interspecies_grievances_no: "£trigger_no£ $tec_has_empire_last_activated_cult$ ['tradition:tec_cult_tec_tenet_interspecies_grievances']"
+ tec_has_last_deactivated_tec_tenet_interspecies_grievances_yes: "£trigger_yes£ $tec_has_empire_last_deactivated_cult$ ['tradition:tec_cult_tec_tenet_interspecies_grievances']"
+ tec_has_last_deactivated_tec_tenet_interspecies_grievances_no: "£trigger_no£ $tec_has_empire_last_deactivated_cult$ ['tradition:tec_cult_tec_tenet_interspecies_grievances']"
+ tec_cult_tec_tenet_interspecies_grievances_modifier: "$tec_cult_tec_tenet_interspecies_grievances$"
+ tec_cult_tec_tenet_interspecies_grievances_header: "§H$tec_cult_tec_tenet_interspecies_grievances$§!"
+ tec_cult_tec_tenet_interspecies_grievances_key: "tec_cult_tec_tenet_interspecies_grievances"
+ faction_demand_TEC_CULT_tec_tenet_interspecies_grievances: "$tec_cult_tec_tenet_interspecies_grievances$"
+ faction_demand_TEC_CULT_tec_tenet_interspecies_grievances_liked_desc: "Having the §Y$tec_cult_tec_tenet_interspecies_grievances$§! Tenet pleases the [Root.GetName]"
+ faction_demand_TEC_CULT_tec_tenet_interspecies_grievances_disliked_desc: "Having the §Y$tec_cult_tec_tenet_interspecies_grievances$§! Tenet displeases the [Root.GetName]"
+ tec_has_tec_tenet_selective_xenophilia_yes: "£trigger_yes£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_selective_xenophilia']"
+ tec_has_tec_tenet_selective_xenophilia_no: "£trigger_no£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_selective_xenophilia']"
+ tec_activate_cult_tec_tenet_selective_xenophilia: "$tec_activate_cult_effect$ ['tradition:tec_cult_tec_tenet_selective_xenophilia']"
+ tec_deactivate_cult_tec_tenet_selective_xenophilia: "$tec_deactivate_cult_effect$ ['tradition:tec_cult_tec_tenet_selective_xenophilia']"
+ tec_has_last_activated_tec_tenet_selective_xenophilia_yes: "£trigger_yes£ $tec_has_empire_last_activated_cult$ ['tradition:tec_cult_tec_tenet_selective_xenophilia']"
+ tec_has_last_activated_tec_tenet_selective_xenophilia_no: "£trigger_no£ $tec_has_empire_last_activated_cult$ ['tradition:tec_cult_tec_tenet_selective_xenophilia']"
+ tec_has_last_deactivated_tec_tenet_selective_xenophilia_yes: "£trigger_yes£ $tec_has_empire_last_deactivated_cult$ ['tradition:tec_cult_tec_tenet_selective_xenophilia']"
+ tec_has_last_deactivated_tec_tenet_selective_xenophilia_no: "£trigger_no£ $tec_has_empire_last_deactivated_cult$ ['tradition:tec_cult_tec_tenet_selective_xenophilia']"
+ tec_cult_tec_tenet_selective_xenophilia_modifier: "$tec_cult_tec_tenet_selective_xenophilia$"
+ tec_cult_tec_tenet_selective_xenophilia_header: "§H$tec_cult_tec_tenet_selective_xenophilia$§!"
+ tec_cult_tec_tenet_selective_xenophilia_key: "tec_cult_tec_tenet_selective_xenophilia"
+ faction_demand_TEC_CULT_tec_tenet_selective_xenophilia: "$tec_cult_tec_tenet_selective_xenophilia$"
+ faction_demand_TEC_CULT_tec_tenet_selective_xenophilia_liked_desc: "Having the §Y$tec_cult_tec_tenet_selective_xenophilia$§! Tenet pleases the [Root.GetName]"
+ faction_demand_TEC_CULT_tec_tenet_selective_xenophilia_disliked_desc: "Having the §Y$tec_cult_tec_tenet_selective_xenophilia$§! Tenet displeases the [Root.GetName]"
  tec_has_tec_cult_knowledge_yes: "£trigger_yes£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_cult_knowledge']"
  tec_has_tec_cult_knowledge_no: "£trigger_no£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_cult_knowledge']"
  tec_activate_cult_tec_cult_knowledge: "$tec_activate_cult_effect$ ['tradition:tec_cult_tec_cult_knowledge']"
