--- a/localisation/english/zz_evolved_opinion_l_english.yml
+++ b/localisation/english/zz_evolved_opinion_l_english.yml
@@ -21,3 +21,8 @@
  triggered_opinion_tec_tenet_public_employment: "Cooperative State Apparatus"
  triggered_opinion_tec_tenet_entrepreneur_economy: "Privatized Economy"
  triggered_opinion_tec_tenet_state_religion: "$tec_cult_tec_tenet_state_religion$"
+ triggered_opinion_tec_tenet_materialistic_views: "$tec_cult_tec_tenet_materialistic_views$"
+ triggered_opinion_tec_tenet_keys_to_power: "Balancing Authority"
+ triggered_opinion_tec_tenet_executive_aggrandizement: "Autocratic Tendencies"
+ triggered_opinion_tec_tenet_cosmic_curiosity: "Starry-Eyed Explorers"
+ triggered_opinion_tec_tenet_interspecies_grievances: "Interspecies Powder Keg"
