more traits + buff to sporangic

--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -980,7 +980,7 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 
 	trait_tec_spore_growth:0 "Sporangic Propagation"
 	trait_tec_spore_growth_desc:0 "§LBy dispersing millions of microscopic corpuscles, of which many are able to thrive due to condition, compatibility or coincidence, this species reproduce incredibly fast.§!"
-	trait_tec_spore_growth_effect:0 "Each pop increases $tec_loc_pop_growth$ on the planet by §G0.25%§!"
+	trait_tec_spore_growth_effect:0 "Each pop increases $tec_loc_pop_growth$ on the planet by §G0.33%§!\n\n$tec_loc_pops$ $tec_loc_basic_resources$ Upkeep: §R+0.20§!"
 
 	trait_tec_dual_gametoids:0 "Dual Gametoids"
 	trait_tec_dual_gametoids_desc:0 "§LEvolutionary adaptations made this species produce several mirroring embryos, which led to explosive population growth due to multiple viable offsprings per reproductive cycle.§!"
@@ -992,17 +992,17 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 
 	d_tec_celestial_organic:0 "Celestial Pod"
 	d_tec_celestial_organic_desc:0 "This strange organic pod is growing by absorbing nearby inert materials and residual energy, life can be sensed thriving on its interior."
-	d_tec_celestial_organic_on_cleared_effect:0 "We will energyze the pod, creating §G1§! organic celestial pop."
+	d_tec_celestial_organic_on_cleared_effect:0 "We will energize the pod, creating §G1§! organic celestial pop."
 	d_tec_celestial_organic_on_cleared_homicidal_effect:0 "We will destroy the pod, giving us §G$tec_loc_unity$§!."
 	d_tec_celestial_organic_on_cleared_devourer_effect:0 "We will devour the pod, providing us with §Y$tec_loc_food$§!"
 	d_tec_celestial_lithoid:0 "Celestial Geode"
 	d_tec_celestial_lithoid_desc:0 "A rocky formation that is pulsating with energy, and absorbing materials from its surroundings for creating something new."
-	d_tec_celestial_lithoid_on_cleared_effect:0 "We will energyze the pod, creating §G1§! lithoid celestial pop."
+	d_tec_celestial_lithoid_on_cleared_effect:0 "We will energize the pod, creating §G1§! lithoid celestial pop."
 	d_tec_celestial_lithoid_on_cleared_homicidal_effect:0 "$d_tec_celestial_organic_on_cleared_homicidal_effect$"
 	d_tec_celestial_lithoid_on_cleared_devourer_effect:0 "We will devour the pod, providing us with §Y$tec_loc_minerals$§!"
 	d_tec_celestial_biomechanical:0 "Celestial Crucible"
 	d_tec_celestial_biomechanical_desc:0 "An incredible apparatus that is recognising nearby energetic signals, creating life from matter and energy at its surroundings."
-	d_tec_celestial_biomechanical_on_cleared_effect:0 "We will energyze the pod, creating §G1§! biomechanical celestial pop."
+	d_tec_celestial_biomechanical_on_cleared_effect:0 "We will energize the pod, creating §G1§! biomechanical celestial pop."
 	d_tec_celestial_biomechanical_on_cleared_homicidal_effect:0 "$d_tec_celestial_organic_on_cleared_homicidal_effect$"
 	d_tec_celestial_biomechanical_on_cleared_devourer_effect:0 "We will devour the pod, providing us with §Y$tec_loc_food$§!"
 
@@ -1015,7 +1015,7 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	d_tec_decomposition_lithoid:0 "Decayed Mountains"
 	d_tec_decomposition_lithoid_desc:0 "Rich veins of minerals are formed from the decayed remains of lithoid species, creating entire new mountains over time ready for mining operations"
 	d_tec_decomposition_organic:0 "Decayed Bog"
-	d_tec_decomposition_organic_desc:0 "An amalgamation of rich biomass created as byproduct of the disintegration of certain organics, where now life can flourish once more from death."
+	d_tec_decomposition_organic_desc:0 "An amalgamation of rich biomass created as byproduct of the disintegration of certain organics, where life can flourish once more from death."
 
 
 	trait_tec_positive_thoughts:0 "Positivist"
@@ -1039,26 +1039,35 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	trait_tec_austere_desc:0 "§LAdapted to a simple life, this species try to avoid wasting any excess of income, living with the minimal amount possible.§!"
 	trait_tec_austere_effect:0 "TODO TRAIT"
 
+	# Job efficiency
+	trait_tec_efficient:0 "Efficient"
+	trait_tec_efficient_desc:0 "§LThe laborious and diligent aspect of this species makes it highly efficient when it comes to usage of resources for developing any task.§!"
+	trait_tec_efficient_effect:0 ""
+
+	trait_tec_inefficient:0 "Inefficient"
+	trait_tec_inefficient_desc:0 "§LA waste of resources is done by members of this species for achieving their desired labour, acting in a really messy way when it comes to administrating whats needed for it.§!"
+	trait_tec_inefficient_effect:0 ""
+
 	# Upkeeps
 	trait_tec_ravenous:0 "Ravenous"
 	trait_tec_ravenous_desc:0 "§LThis species has a constant need of feeding, reaching even higher levels of hostility for that purpose.§!"
-	trait_tec_ravenous_effect:0 "TODO TRAIT species base resource upkeep +100%"
+	trait_tec_ravenous_effect:0 "$tec_loc_pops$ $tec_loc_basic_resources$ Upkeep: §R+100%§!"
 
 	trait_tec_voracious:0 "Voracious"
 	trait_tec_voracious_desc:0 "§LThis species highly active metabolism require a constant nurturing in order to function, leading to continuous feeding frenzies.§!"
-	trait_tec_voracious_effect:0 "TODO TRAIT species base resource upkeep +50%"
+	trait_tec_voracious_effect:0 "$tec_loc_pops$ $tec_loc_basic_resources$ Upkeep: §R+50%§!"
 
 	trait_tec_gluttons:0 "Gluttons"
 	trait_tec_gluttons_desc:0 "§LThe unmeasured consumption of resources for feeding purposes is a common practice for this species.§!"
-	trait_tec_gluttons_effect:0 "TODO TRAIT species base resource upkeep +25%"
+	trait_tec_gluttons_effect:0 "$tec_loc_pops$ $tec_loc_basic_resources$ Upkeep: §R+25%§!"
 
 	trait_tec_efficient_metabolism:0 "Efficient Metabolism"
 	trait_tec_efficient_metabolism_desc:0 "§LThis species organism works at an efficient metabolic level, able to sustain itself for longer with lower fed income.§!"
-	trait_tec_efficient_metabolism_effect:0 "TODO TRAIT species base resource upkeep -25%"
+	trait_tec_efficient_metabolism_effect:0 "$tec_loc_pops$ $tec_loc_basic_resources$ Upkeep: §G-25%§!"
 
 	trait_tec_catabolic_energization:0 "Catabolic Energization"
 	trait_tec_catabolic_energization_desc:0 "§LA very efficient and streamlined metabolic process makes this species organism extract all possible nutrients of anything they consume.§!"
-	trait_tec_catabolic_energization_effect:0 "TODO TRAIT species base resource upkeep -50%"
+	trait_tec_catabolic_energization_effect:0 "$tec_loc_pops$ $tec_loc_basic_resources$ Upkeep: §G-50%§!"
 
 	# Upkeeps machine
 	trait_tec_robot_extreme_upkeep:0 "Overcharged Circuitry"
