--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -4,9 +4,9 @@
  TRAIT_INVASIVE_EFFECT: "§EPer §YNon-Plantoid §RNegative§!§! trait selected:§!\n - Habitability, Growth and Assembly: §G+5%§!\n\n§EPer §YNon-Plantoid §GPositive§!§! trait selected:§!\n - Habitability, Growth and Assembly: §R-2.5%§!\n\n§EPlantoid traits count as negative traits, providing bonuses§!"
 	#OLD_TRAIT_INVASIVE_EFFECT: "§YCan only select negative or botanical traits§!\n\nHabitability: §G+5%§! for each negative trait selected\nPop Growth Speed: §G+5%§! for each negative trait selected"
 
- TRAIT_PLANTOID_BUDDING_EFFECT_EVOLVED:1 "Each pop working as a slave or better produces 0.02 £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\nPop $tec_loc_basic_resources$ Upkeep: §R+0.20§!\n\nThis stacks with other sources of $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ such as £building£ §H$building_clone_vats$§! or £job_spawning_drone£ §H$job_spawning_drone_plural$§!."
- TRAIT_LITHOID_BUDDING_EFFECT_EVOLVED:0 "$TRAIT_PLANTOID_BUDDING_EFFECT$\nPop $tec_loc_basic_resources$ Upkeep: §R+0.20§!\n\nThe §H$trait_lithoid$ Trait§! modifies this trait's effects."
- TRAIT_TIYANKI_BUDDING_EFFECT_EVOLVED:0 "Each pop working as a slave or better produces 0.05 £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\nPop $tec_loc_basic_resources$ Upkeep: §R+0.3§!\n\nThis stacks with other sources of $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ such as £building£ §H$building_clone_vats$§! or £job_spawning_drone£ §H$job_spawning_drone_plural$§!."
+ TRAIT_PLANTOID_BUDDING_EFFECT_EVOLVED:1 "Each pop working as a slave or better produces 0.02 £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\n$tec_loc_pops$ $tec_loc_basic_resources$ Upkeep: §R+0.20§!\n\nThis stacks with other sources of $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ such as £building£ §H$building_clone_vats$§! or £job_spawning_drone£ §H$job_spawning_drone_plural$§!."
+ TRAIT_LITHOID_BUDDING_EFFECT_EVOLVED:0 "$TRAIT_PLANTOID_BUDDING_EFFECT$\n$tec_loc_pops$ $tec_loc_basic_resources$ Upkeep: §R+0.20§!\n\nThe §H$trait_lithoid$ Trait§! modifies this trait's effects."
+ TRAIT_TIYANKI_BUDDING_EFFECT_EVOLVED:0 "Each pop working as a slave or better produces 0.05 £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\n$tec_loc_pops$ $tec_loc_basic_resources$ Upkeep: §R+0.3§!\n\nThis stacks with other sources of $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ such as £building£ §H$building_clone_vats$§! or £job_spawning_drone£ §H$job_spawning_drone_plural$§!."
 
 	exotic_metabolism_tooltip:2 "£exotic_gases£ Exotic Gas Upkeep: §R+0.125§!"
 # /
